# CacheFlow

./: .gitignore  CMakeLists.txt  Idea.txt  README.md  setup.sh
.github/workflows/: pages.yml
benchmarks/: CMakeLists.txt  bench_config.h  bench_kv_cache.cpp  bench_latency.cpp  bench_scaling.cpp  bench_throughput.cpp
benchmarks/scripts/: generate_report.py  plot_latency.py  plot_scaling.py  plot_throughput.py  run_all.sh
scripts/: build.sh
scripts/slurm/: benchmark.sbatch  benchmark_sweep.sbatch  build_and_test.sbatch
site/: index.html
site/css/: style.css
site/js/: charts.js  nav.js
src/cacheflow/: cacheflow.h  common.h
src/cacheflow/cuda/: kv_cache_kernels.cu  kv_cache_kernels.cuh  memory_utils.cu  memory_utils.cuh  paged_attention.cu  paged_attention.cuh
src/cacheflow/decode/: batch_decode.cpp  batch_decode.h
src/cacheflow/kv_cache/: block_manager.cpp  block_manager.h  memory_pool.cpp  memory_pool.h  prefix_cache.cpp  prefix_cache.h
src/cacheflow/profiler/: metrics.h  profiler.cpp  profiler.h  trace.cpp  trace.h
src/cacheflow/scheduler/: batch_manager.cpp  batch_manager.h  request.h  scheduler.cpp  scheduler.h
tests/: CMakeLists.txt  test_batch_manager.cpp  test_block_manager.cpp  test_memory_pool.cpp  test_prefix_cache.cpp  test_profiler.cpp  test_scheduler.cpp
